--- a/templates/admin/super.system-status.twig
+++ b/templates/admin/super.system-status.twig
@@ -140,7 +140,7 @@
                             <td><a href="{{ uriFor('server', {'server': status.server.id})}}">{{ status.server.name }}</a></td>
                             <td>
                                 <div class="pre-wrapper">
-                                    <pre class="code_clear">{{ status.detail }}</pre>
+                                    <pre>{{ status.detail }}</pre>
                                 </div>
                             </td>
                         </tr>
@@ -171,7 +171,7 @@
                                 <td><a href="{{ uriFor('server', {'server': status.server.id})}}">{{ status.server.name }}</a></td>
                                 <td>
                                     <div class="pre-wrapper">
-                                        <pre class="code_clear">{{ status.detail }}</pre>
+                                        <pre>{{ status.detail }}</pre>
                                     </div>
                                 </td>
                             </tr>
