--- a/templates/credentials/credentials.twig
+++ b/templates/credentials/credentials.twig
@@ -42,9 +42,9 @@
                         <td>{{ credential.name }}</td>
                         <td>
                             {% if credential.type == 'aws' %}
-                                Key: <code class="code_clear">{{ credential.aws.key }}</code>
+                                Key: <code>{{ credential.aws.key }}</code>
                             {% elseif credential.type == 'privatekey' %}
-                                Username: <code class="code_clear">{{ credential.privatekey.username }}</code>
+                                Username: <code>{{ credential.privatekey.username }}</code>
                             {% endif %}
                         </td>
                     </tr>
