--- a/templates/user/settings.twig
+++ b/templates/user/settings.twig
@@ -27,9 +27,9 @@
 {% block navigation_pref %}
     <form method="post">
 
-        <label class="checkbox--switch">
+        <label class="checkbox-toggle">
             <input type="checkbox" name="seriousbusiness" value="1" {{ is_serious_business_mode ? ' checked' : '' }}>
-            <b class="checkbox--switch__pill"></b>Use <b>Serious Business&trade;</b> mode
+            <b class="checkbox-toggle--pill"></b>Use <b>Serious Business&trade;</b> mode
         </label>
 
         <p>
