--- a/templates/application/application.permission.remove.twig
+++ b/templates/application/application.permission.remove.twig
@@ -28,9 +28,9 @@
                     <ul class="list--bare">
                         {% for perm in permissions %}
                             <li>
-                                <label class="checkbox--switch">
+                                <label class="checkbox-toggle">
                                     <input type="checkbox" name="permissions[]" value="{{ perm.original.id }}" {{ perm.original.id in form.permissions ? ' checked' : '' }}>
-                                    <b class="checkbox--switch__pill"></b>
+                                    <b class="checkbox-toggle--pill"></b>
                                     {% if perm.type == 'prod' %}
                                         {{ perm.original.user.handle|lower }} {{ macros.status('Prod', 'error') }}
                                     {% elseif perm.type == 'lead' %}
