--- a/templates/environment/environments.twig
+++ b/templates/environment/environments.twig
@@ -3,8 +3,27 @@
 
 {% set page_title = "Environments" %}
 
+{% set is_admin = current_authorizations.isSuper() %}
+
 {% block content %}
     <h1>{{ page_title }}</h1>
+
+    {{ block('env_table') }}
+
+    <ul>
+        <li><a class="btn" href="{{ uriFor('applications') }}">Applications</a></li>
+        <li>
+            {% if is_admin %}
+                <a class="btn btn--action" href="{{ uriFor('environment.add') }}">Add Environment</a>
+            {% else %}
+                <button class="btn btn--action btn--disabled">Add Environment</button>
+            {% endif %}
+        </li>
+    </ul>
+
+{% endblock %}
+
+{% block env_table %}
 
     {% if envs %}
         <table class="table--spacing-medium table--striped">
@@ -24,7 +43,7 @@
                                 {{ environment.name }}
                             {% endif %}
                         </td>
-                        <td class="tr">
+                        <td>
                             <a href="{{ uriFor('environment', {'environment': environment.id}) }}">View</a>
                         </td>
                     </tr>
@@ -34,13 +53,5 @@
     {% else %}
         <p>There are no environments.</p>
     {% endif %}
-
-    <ul>
-        <li><a class="btn" href="{{ uriFor('applications') }}">Applications</a></li>
-
-        {% if isUserSuper(current_user) %}
-            <li><a class="btn btn--action" href="{{ uriFor('environment.add') }}">Add Environment</a></li>
-        {% endif %}
-    </ul>
 
 {% endblock %}
