Add user and users pages

--- a/templates/user/settings.twig
+++ b/templates/user/settings.twig
@@ -51,17 +51,19 @@
         <table class="table--spacing-medium">
             <thead>
                 <tr>
+                    <th class="t10">ID</th>
                     <th>Name</th>
                     <th>Token Secret</th>
-                    <th></th>
+                    <th class="t10"></th>
                 </tr>
             </thead>
             <tbody>
                 {% for token in tokens %}
                     <tr>
+                        <td>{{ token|shortGUID }}</td>
                         <td>{{ token.name }}</td>
                         <td><code>{{ token.value }}</code></td>
-                        <td class="tr">
+                        <td>
                             <a href="{{ uriFor('user.token.remove', {'user': user.id, 'token': token.id}) }}">
                                 Revoke
                             </a>
@@ -78,8 +80,8 @@
         <h3>Add new personal access token</h3>
 
         <div class="form-wrapper">
-            <label for="token-label">Token Name</label>
-            <input type="text" name="label" id="token-label" maxlength="50" class="text-input" required>
+            <label for="token-name">Token Name</label>
+            <input type="text" class="text-input" name="name" id="token-name" maxlength="50" required>
 
             <p class="leader">
                 <input class="btn btn--action btn--small" type="submit" value="Generate Token">
