Update org and env pages with minor tweaks

--- a/templates/admin/audit-history.twig
+++ b/templates/admin/audit-history.twig
@@ -43,7 +43,7 @@
             <tr>
                 <td colspan="4">
                     <div class="pre-wrapper">
-                        <pre>{{ event.data|jsonPretty|raw }}</pre>
+                        <pre>{{ event.data|jsonPretty }}</pre>
                     </div>
                 </td>
             </tr>
