--- a/templates/organization/organization.add.twig
+++ b/templates/organization/organization.add.twig
@@ -1,5 +1,5 @@
 {% extends 'base.twig' %}
-{% import "macros.form.twig" as form_macros %}
+{% import 'macros.form.twig' as form_macros %}
 
 {% set page_title = 'Add Organization' %}
 
@@ -12,9 +12,9 @@
         <form method="post">
             <ul class="form-fields">
                 <li>
-                    {% set hasError = form_macros.hasError(errors, 'name') %}
+                    {% set has_error = form_macros.hasError(errors, 'name') %}
                     <label for="name">Name</label>
-                    <input type="text" class="text-input t50{{ hasError ? ' is-error' : '' }}" name="name" id="name" value="{{ form.name }}" maxlength="30" required>
+                    <input type="text" class="text-input t50{{ has_error ? ' is-error' : '' }}" name="name" id="name" value="{{ form.name }}" maxlength="30" required>
                     <small>
                         Unique name such as <span>"myteam"</span> or <span>"my-projects"</span>.
                         <br>Alphanumeric, hyphen, and period characters only.
@@ -22,9 +22,9 @@
                 </li>
 
                 <li>
-                    {% set hasError = form_macros.hasError(errors, 'description') %}
+                    {% set has_error = form_macros.hasError(errors, 'description') %}
                     <label for="description">Description</label>
-                    <input type="text" class="text-input{{ hasError ? ' is-error' : '' }}" name="description" id="description" value="{{ form.description }}" maxlength="100" required>
+                    <input type="text" class="text-input{{ has_error ? ' is-error' : '' }}" name="description" id="description" value="{{ form.description }}" maxlength="100" required>
                     <small>
                         Display description for this organization such as
                         <span>"MyTeam"</span> or <span>"My Secret Projects"</span>.
